--- a/CommunityKitchen/Views/Home/About.cshtml
+++ b/CommunityKitchen/Views/Home/About.cshtml
@@ -37,7 +37,7 @@
                             <div class="content-box">
                                 <h4>Dimitris Stratsianis</h4>
                                 <div class="text">
-                                    <p>Team Leader - Backend Engineer (The pun guy)</p>
+                                    <p>Full Stack .Net Developer</p>
                                 </div>
                                 <ul class="social">
                                     <li><a href="#"><span class="fa fa-facebook"></span></a></li>
@@ -58,7 +58,6 @@
                                 <h4>Ioannis Karakasidis</h4>
                                 <div class="text">
                                     <p>Full Stack .Net Developer</p>
-                                    <p>(The musician)</p>
                                 </div>
                                 <ul class="social">
                                     <li><a href="#"><span class="fa fa-facebook"></span></a></li>
@@ -73,13 +72,12 @@
                     <div class="item">
                         <div class="bg-area">
                             <div class="image-box-team" style="padding-left:30px;">
-                                <img src="~/Assets/images/team/greenranger.jpg" style="height:380px;width:200px; padding-bottom:20px" />
+                                <img src="~/Assets/images/team/Mmpr-black.jpg" style="height:380px;width:200px; padding-bottom:20px" />
                             </div>
                             <div class="content-box">
                                 <h4>Giannis</h4><h4> Mihailidis</h4>
                                 <div class="text">
                                     <p>Full Stack .Net Developer</p>
-                                    <p>(The front genius)</p>
                                 </div>
                                 <ul class="social">
                                     <li><a href="#"><span class="fa fa-facebook"></span></a></li>
@@ -100,7 +98,6 @@
                                 <h4>Theofilaktidou Niki</h4>
                                 <div class="text">
                                     <p>Full Stack .Net Developer</p>
-                                    <p>(The math brain)</p>
                                 </div>
                                 <ul class="social">
                                     <li><a href="#"><span class="fa fa-facebook"></span></a></li>
@@ -110,17 +107,16 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4 col-md-3  col-xs-12">
+                <div style="align-content:center!important" class="col-4 col-md-3  col-xs-12">
                     <div class="item">
                         <div class="bg-area">
                             <div class="image-box-team" style="padding-left:30px;">
-                                <img src="~/Assets/images/team/Mmpr-black.jpg" style="height:380px;width:200px; padding-bottom:20px" />
+                                <img src="~/Assets/images/team/greenranger.jpg" style="height:380px;width:200px; padding-bottom:20px" />
                             </div>
                             <div class="content-box">
                                 <h4>Likos</h4><h4> Costas</h4>
                                 <div class="text">
                                     <p>Full Stack .Net Developer</p>
-                                    <p>(Afirimeni Texni)</p>
                                 </div>
                                 <ul class="social">
                                     <li><a href="#"><span class="fa fa-facebook"></span></a></li>
