--- a/CommunityKitchen/Views/Home/About.cshtml
+++ b/CommunityKitchen/Views/Home/About.cshtml
@@ -107,7 +107,7 @@
                         </div>
                     </div>
                 </div>
-                <div style="align-content:center!important" class="col-4 col-md-3  col-xs-12">
+                <div style="margin-left:38%!important" class="col-4 col-md-3  col-xs-12">
                     <div class="item">
                         <div class="bg-area">
                             <div class="image-box-team" style="padding-left:30px;">
