--- a/CommunityKitchen/Views/Cause/CauseIndex.cshtml
+++ b/CommunityKitchen/Views/Cause/CauseIndex.cshtml
@@ -1,5 +1,6 @@
-﻿@model IEnumerable<Entities.Cause>
-
+﻿@model PagedList.IPagedList<Entities.Cause>
+@using PagedList.Mvc;
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 @{
     ViewBag.Title = "CauseIndex";
 }
@@ -117,6 +118,12 @@
         {
             <h1 style="color:red">No Causes Found</h1>
         }
+        <div class="ourPaging">
+            Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+
+            @Html.PagedListPager(Model, page => Url.Action("CauseIndex",
+                new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
+        </div>
     </div>
 </section>
 
