--- a/CommunityKitchen/Views/Cause/OrganizeCause.cshtml
+++ b/CommunityKitchen/Views/Cause/OrganizeCause.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<Entities.Cause>
+﻿@model PagedList.IPagedList<Entities.Cause>
+@using PagedList.Mvc;
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
 @{
     ViewBag.Title = "OrganizeCause";
@@ -41,9 +43,9 @@
                             }
                             else
                             {
-                        <div style="text-align: left">
-                            <img id="imgcause" style="border-radius: 15px; height: 432px; width: 768px; object-fit: contain; " src="~/Assets/images/ImagesSaved/@cause.Photo" alt="Image couldn't render" />
-                        </div>
+                                <div style="text-align: left">
+                                    <img id="imgcause" style="border-radius: 15px; height: 432px; width: 768px; object-fit: contain; " src="~/Assets/images/ImagesSaved/@cause.Photo" alt="Image couldn't render" />
+                                </div>
                             }
                             <div style="padding-top:10px; padding-bottom:10px;">
                                 <strong>Target Goal: </strong>
@@ -60,6 +62,12 @@
                         <hr />
                         <br />
                     }
+                    <div class="ourPaging">
+                        Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+
+                        @Html.PagedListPager(Model, page => Url.Action("OrganizeCause",
+                            new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
+                    </div>
 
                 </div>
             </div>
