--- a/CommunityKitchen/Views/Event/EventsIndex.cshtml
+++ b/CommunityKitchen/Views/Event/EventsIndex.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<Entities.Event>
+﻿@model PagedList.IPagedList<Entities.Event>
+@using PagedList.Mvc;
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
 @{
     ViewBag.Title = "OrganizeEvents";
@@ -88,6 +90,14 @@
                             }
                         }
 
+
+
+                    </div>
+                    <div class="ourPaging">
+                        Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+
+                        @Html.PagedListPager(Model, page => Url.Action("EventsIndex",
+                            new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
                     </div>
 
                 </div>
