--- a/CommunityKitchen/Assets/css/signuplogin.css
+++ b/CommunityKitchen/Assets/css/signuplogin.css
@@ -212,7 +212,7 @@ input[type=checkbox] {
 .img4 :first-child {
     position: absolute;
     display: block;
-    margin-top: 72%;
+    margin-top: 356px;
     margin-left: 49px;
 }
 
