--- a/CommunityKitchen/Views/Cause/CreateCause.cshtml
+++ b/CommunityKitchen/Views/Cause/CreateCause.cshtml
@@ -8,7 +8,7 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="default-form-area" style="display: flex; justify-content: center">
+    <div class="default-form-area" style="margin-top: 136px !important; display: flex; justify-content: center ">
         <div id="contact-form" class="default-form">
             <h1 style="margin-left:20px">Creating Cause</h1>
             <div class="row clearfix" style="justify-content: center">
