--- a/CommunityKitchen/Views/Cause/DeleteCause.cshtml
+++ b/CommunityKitchen/Views/Cause/DeleteCause.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "DeleteCause";
 }
 
-<div class="default-form-area" style="display: flex; justify-content: center">
+<div class="default-form-area" style="margin-top: 34px !important; display: flex; justify-content: center">
     <div id="contact-form" class="default-form">
         <div class="section-title">
             <h1 style="margin-left:45px">Are you sure you want to <span>delete</span> this Cause?</h1>
