--- a/CommunityKitchen/Views/Item/Delete.cshtml
+++ b/CommunityKitchen/Views/Item/Delete.cshtml
@@ -3,46 +3,52 @@
 @{
     ViewBag.Title = "Delete";
 }
-
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Item</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.ItemName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ItemName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Quantity)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Quantity)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+<div class="default-form-area" style="margin-top: 34px !important; display: flex; justify-content: center">
+    <div id="contact-form" class="default-form">
+        <div class="section-title">
+            <h1 style="margin-left:45px">Are you sure you want to <span>delete</span> this Cause?</h1>
         </div>
-    }
+        <div class="row clearfix" style="justify-content: center">
+            <div class="col-md-12 col-sm-12 col-xs-6">
+                <hr />
+                <div class="form-group">
+                    <div class="section-title">
+                        <h2>Title</h2>
+                    </div>
+                    @Html.DisplayFor(model => model.ItemName)
+                </div>
+
+                <div class="form-group">
+                    <div class="section-title">
+                        <h2>Description</h2>
+                    </div>
+                    @Html.DisplayFor(model => model.Quantity)
+                </div>
+
+                <div class="form-group">
+                    <div class="section-title">
+                        <h2>Photo</h2>
+                    </div>
+                    @Html.DisplayFor(model => model.Price)
+                </div>
+                <div class="form-group">
+
+                    @using (Html.BeginForm())
+                    {
+                        @Html.AntiForgeryToken()
+                        <div class="form-group">
+                            <div>
+                                <input type="submit" value="Delete" class="thm-btn style-1" />
+                            </div>
+                        </div>
+
+                        <div>
+
+                            @Html.ActionLink("Back to List", "OrganizeCause")
+                        </div>
+                    }
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
