--- a/CommunityKitchen/Views/Shared/Components/_LogIn.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_LogIn.cshtml
@@ -8,7 +8,7 @@
         <div class="form">
             <div class="close" onclick="signupToggle()">&times;</div>
             <div class="text">
-                <h2>Register Now</h2>
+                <h2>Register Form</h2>
             </div>
             <form method="post" action="/Account/Register">
                 @Html.AntiForgeryToken()
@@ -25,30 +25,25 @@
                 </div>
                 <div class="inputBx">
                     <input onchange="UserCheck()" id="Email" type="email" name="Email" placeholder="Email" required>
-                    <p id="stat"></p>
                     <div class="img2">
-                        <img src="https://img.icons8.com/external-nawicon-glyph-nawicon/64/000000/external-email-communication-nawicon-glyph-nawicon.png" />
+                        <img style="margin-top: -5px;" src="https://img.icons8.com/external-nawicon-glyph-nawicon/64/000000/external-email-communication-nawicon-glyph-nawicon.png" />
                     </div>
                     <input id="password" type="password" name="Password" placeholder="Password" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[$!%*?&])[A-Za-z\d$!%*?&]{6,}$"
-                           title="Must contain at least one number, one uppercase letter and one special character, minimum 6 characters" required>
+                           title="Must contain at least one number and one uppercase letter and one special character,minimum 6 characters" required>
                     <input id="confpassword" type="password" name="ConfirmPassword" placeholder="Confirm password" minlength="6">
+                </div>
+                <p class="remeber"><input onclick="ShowPass()" id="showpass" type="checkbox" />Show Password</p>
+                <div class="inputBx">
                     <div class="img4">
                         <img src="https://img.icons8.com/ios-glyphs/30/000000/password--v1.png" />
-                        <img src="https://img.icons8.com/ios-glyphs/30/000000/password--v1.png" />
+                        <img style="margin-top: -57px;" src="https://img.icons8.com/ios-glyphs/30/000000/password--v1.png" />
                     </div>
+                    <p id="stat"></p>
                     <div class="inputBx">
                         <input id="sub" type="submit" value="Register">
                     </div>
                     <div class="inputBx">
-                        <p>Already Have An Account? <a onclick="signinToggle()" href="#">Sign in</a></p>
-                    </div>
-                </div>
-            </form>
-            <form action="/Account/ExternalLogin" method="post">
-                @Html.AntiForgeryToken()
-                <div id="socialLoginList">
-                    <div class="inputBx">
-                        <p>Login using other accounts <i type="submit" class="btn btn-default" style="color:brown;" id="Google" name="provider" value="Google" title="Log in using your Google account">Google</i></p>
+                        <p>ALREADY HAVE AN ACCOUNT? <a onclick="signinToggle()" href="#">Sign in</a></p>
                     </div>
                 </div>
             </form>
@@ -63,37 +58,40 @@
             <form method="post" action="/Account/Login">
                 @Html.AntiForgeryToken()
                 <div class="inputBx">
-                    <input type="text" name="Email" placeholder="Username">
+                    <input id="username" onchange="UserChecked()" type="text" name="Email" placeholder="UserName">
                     <img src="https://img.icons8.com/ios-glyphs/30/000000/user--v1.png" />
+                    <p id="stats"></p>
                 </div>
 
                 <div class="inputBx">
-                    <input type="password" name="Password" placeholder="Password">
+                    <input id="passwordlogin" type="password" name="Password" placeholder="Password">
                     <img src="https://img.icons8.com/ios-glyphs/30/000000/password--v1.png" />
                 </div>
-
-                <label class="remember"><input type="checkbox" value="true" name="RememberMe">Remember me</label>
+                <p class="remember"><input onclick="ShowLoginPass()" type="checkbox" />Show Password</p>
+                <br />
+                <p class="remeber"><input type="checkbox" value="true" name="RememberMe">Remember me</p>
 
                 <div class="inputBx">
                     <input id="sub" type="submit" value="Login">
                 </div>
                 <div class="inputBx">
                     <p>Forgot your <a href="#">Password?</a></p>
-                    <p>You don't have an account?  <a onclick="registerToggle()" href="#" style="">Sign Up</a></p>
+                    <p>You don't have an account?  <a onclick="registerToggle()" href="#">Sign up</a></p>
                 </div>
-                <p>Login using other accounts</p>
             </form>
-            
-                <form action="/Account/ExternalLogin" method="post">
-                    @Html.AntiForgeryToken()
-                    <div id="socialLoginList">
-                        <div class="inputBx">
-                            <button type="submit" class="btn btn-default" style="color:brown;" id="Google" name="provider" value="Google" title="Log in using your Google account">Google</button>
+            <p>Login with social media</p>
+            <ul class="sci">
+                <li>
+                    <form action="/Account/ExternalLogin" method="post">
+                        @Html.AntiForgeryToken()
+                        <div id="socialLoginList">
+                            <p>
+                                <button type="submit" class="btn btn-default" id="Google" name="provider" value="Google" title="Log in using your Google account"><i class="fa fa-google"></i></button>
+                            </p>
                         </div>
-                    </div>
-                </form>
-            
-            
+                    </form>
+                </li>
+            </ul>
         </div>
     </div>
 
@@ -101,6 +99,26 @@
 
 
     <script>
+        function ShowPass() {
+            var checkb = document.getElementById('password').type;
+            if (checkb == "password") {
+                document.getElementById('password').type = 'text';
+            }
+            else {
+                document.getElementById('password').type = 'password';
+            }
+        }
+        function ShowLoginPass() {
+            var checkb = document.getElementById('passwordlogin').type;
+            if (checkb == "password") {
+                document.getElementById('passwordlogin').type = 'text';
+            }
+            else {
+                document.getElementById('passwordlogin').type = 'password';
+            }
+        }
+
+
 
              function UserCheck() {
             $("#stat").html("Checking...");
@@ -110,12 +128,24 @@
             },
             function (data) {
                 if (data == 0) {
-                    $("#stat").html('<font color="darkgreen">Username Available </font>');
+                    $("#stat").html('<font color="Green">Available !. </font>');
                 }
                 else {
-                    $("#stat").html('<font color="Red">Username Already Exists </font>');
+                    $("#stat").html('<font color="Red">Is Already Exists. </font>');
                 }
 
+                })
+            }
+
+            function UserChecked() {
+            $.post("@Url.Action("CheckUsernameAvailability", "ApplicationUser")",
+            {
+                userdata: $("#username").val()
+            },
+            function (data) {
+                if (data == 0) {
+                    $("#stats").html('<font color="Red">No Account pls register </font>');
+                }
                 })
             }
 
@@ -138,5 +168,3 @@
     </script>
 
 </body>
-
-
