--- a/CommunityKitchen/Views/Item/Create.cshtml
+++ b/CommunityKitchen/Views/Item/Create.cshtml
@@ -10,7 +10,7 @@
 
     <div class="default-form-area" style="margin-top: 140px !important; display: flex; justify-content: center">
         <div id="contact-form" class="default-form">
-            <h1 style="margin-left:20px">Creating Cause</h1>
+            <h1 style="margin-left:20px">Creating Item</h1>
             <div class="row clearfix" style="justify-content: center">
                 <div class="col-md-12 col-sm-12 col-xs-6">
                     <hr />
