--- a/CommunityKitchen/Views/Event/EventsIndex.cshtml
+++ b/CommunityKitchen/Views/Event/EventsIndex.cshtml
@@ -8,14 +8,14 @@
 
 <style>
     .eventimg {
-        border-radius: 20px;
-        height: 179px;
-        transition: all 0.5s ease 0s;
+        border-radius: 100px;
+        height: 200px;
+        width: 800px;
+        object-fit: cover;
+        transition: all 500ms ease 0s;
     }
         .eventimg:hover {
-            height: 533px !important;
-            transform: scale(1);
-            transition: all 0.5s ease 0s;
+            height: 500px !important;
         }
 </style>
 
