--- a/CommunityKitchen/Views/Shared/Components/_NavBar.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_NavBar.cshtml
@@ -52,9 +52,9 @@
                     </li>
                     @if (User.Identity.IsAuthenticated)
                     {
-                        <li class="logoffname" >
-                            Hello @User.Identity.Name
-                        </li>
+                <li class="logoffname">
+                    <span>Hello&nbsp;</span> @User.Identity.Name.Split('@')[0]
+                </li>
                         <li class="logoff">
                             @Html.ActionLink("Logout", "LogOff", "Account")
                         </li>
@@ -89,4 +89,5 @@
         </div>
     </nav>
 </div>
+
 
