--- a/CommunityKitchen/Views/Shared/Components/_Header.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_Header.cshtml
@@ -1,4 +1,5 @@
-﻿@using Microsoft.Owin.Security
+﻿@model  Entities.IdentityModel.ApplicationUser
+@using Microsoft.Owin.Security
 <div class="boxed_wrapper" style="margin-bottom: 10px; margin-top: 10px; ">
     <header class="top-bar">
         <div class="container">
