ABoutUs+allagh sto navbar

--- a/CommunityKitchen/Assets/css/style.css
+++ b/CommunityKitchen/Assets/css/style.css
@@ -2641,11 +2641,11 @@ input, textarea {
 
 }
 
-.meet-us{
+/*.meet-us{
     padding-top:20px;
     padding-bottom:20px;
     line-break: loose;
-}
+}*/
 
 .our-pics{
     justify-content: space-around;
@@ -5433,7 +5433,8 @@ Project styles
 }
 
     .our-team.style-two {
-        padding: 100px 0px 118px;
+       padding: 0px 100px 140px;
+        
     }
 
     .our-team .section-title {
