--- a/CommunityKitchen/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/CommunityKitchen/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,8 +1,8 @@
 ﻿@model Entities.IdentityModel.AccountViewModel.ExternalLoginConfirmationViewModel
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Login With Google";
 }
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 <h3>Associate your @ViewBag.LoginProvider account.</h3>
 
 @using (Html.BeginForm("ExternalLoginConfirmation", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
