--- a/CommunityKitchen/Views/Cause/CauseIndex.cshtml
+++ b/CommunityKitchen/Views/Cause/CauseIndex.cshtml
@@ -71,7 +71,7 @@
                                         }
                                         else
                                         {
-                                            <img style="max-height: 240px; max-width: 360px; object-fit: cover;" src="~/Assets/images/ImagesSaved/@cause.Photo" alt="No Image found" />
+                                            <img style="max-height: 240px; max-width: 360px; object-fit: cover;" src="~/Assets/images/ImagesSaved/@cause.Photo" alt="Cause''s Image" />
                                         }
                                         <div class="overlay">
                                             <div class="box">
