--- a/CommunityKitchen/Views/Shared/Components/_Header.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_Header.cshtml
@@ -27,7 +27,7 @@
                         <li>
                             @if (true)
                             {
-                                <button><i class="icon fa fa-pencil"></i>Subscribe to our newsletter</button>
+                                <button><i class="icon fa fa-pencil"></i></button>
                             }
                     </li>
                     
