--- a/CommunityKitchen/Views/Home/Index.cshtml
+++ b/CommunityKitchen/Views/Home/Index.cshtml
@@ -118,7 +118,7 @@
                                         <img id="imgkat" src="~/Assets/images/ImagesSaved/@cause.Photo" style="width:1550px; object-fit:cover;" />
                                         <div id="kati2">
 
-                                            <div id="logia"><h4 style="color: black;">@cause.Title</h4><br /><h4 style="color: red;"><span style="color: black;">Description:</span> <br />@cause.Description</h4> </div>
+                                            <div id="logia"><h4 style="color: #0e0d0de4;">@cause.Title</h4><br /><h4 style="color: #ffffffce;"><span style="color: #0e0d0de4; ">Description:</span> <br />@cause.Description</h4> </div>
 
                                             <div id="kati3">
                                                 <div>
@@ -130,14 +130,14 @@
                                                         </svg>
 
                                                         <div id="kati5">
-                                                            <h2>@res<span>%</span></h2>
+                                                            <h2 style="color:#ffffff94;">@res<span>%</span></h2>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
 
                                         </div>
-                                        <div id="lett" class="donate-price"><b>@cause.CurrentAmmount€</b>&nbsp;  Raised of <span id="lett1">@cause.TargetGoal€</span> Goal</div>
+                                        <div id="lett" class="donate-price"><strong>@cause.CurrentAmmount€&nbsp;  Raised of <span  class="lett1"> @cause.TargetGoal€ </span> Goal </strong></div>
 
                                     </div>
                                 </div>
