--- a/CommunityKitchen/Views/Cause/CauseDetails.cshtml
+++ b/CommunityKitchen/Views/Cause/CauseDetails.cshtml
@@ -11,10 +11,10 @@
             <h1>Cause <span>Details</span></h1>
         </div>
         <div class="section-title">
-            <h5>Joion us on our Cause</h5>
+            <h5>Join us on our Cause</h5>
             <div class="meet-us">
-                <p style="line-height: 1.7em;">Here are soem more details about the cause you're chacking out.</p>
-                <p style="line-height: 1.7em;">By joining us on a Cause you are helping the team reach those who need help faster and saves lives from danger.</p>
+                <p style="line-height: 1.7em;">Here are soem more details about the cause you're checking out.</p>
+                <p style="line-height: 1.7em;">By joining us on a Cause you are helping the team reach those who need help faster and save lives from danger.</p>
             </div>
         </div>
         <div class="breadcumb-wrapper">
