--- a/CommunityKitchen/Views/Shared/Components/_LogIn.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_LogIn.cshtml
@@ -144,7 +144,7 @@
             },
             function (data) {
                 if (data == 0) {
-                    $("#stats").html('<font color="Red">No Account pls register </font>');
+                    $("#stats").html('<font color="Red">No account found, please register. </font>');
                 }
                 })
             }
