--- a/CommunityKitchen/Views/Event/EventDetails.cshtml
+++ b/CommunityKitchen/Views/Event/EventDetails.cshtml
@@ -27,7 +27,9 @@
             </ul>
 
             <div class="text">
-                <p>@Model.Description</p>
+                <h3>@Model.Description</h3>
+                <hr />
+                <p>@Model.FullDescription</p>
             </div>
 
             <div>
