--- a/CommunityKitchen/Views/Home/Contact.cshtml
+++ b/CommunityKitchen/Views/Home/Contact.cshtml
@@ -68,7 +68,7 @@
             <h2>Leave us a message</h2>
         </div>
         <div class="default-form-area">
-            <form id="contact-form" name="contact_form" class="default-form" method="post">
+            <form id="contact-form" name="contact_form" class="default-form"  method="POST">
                 <div class="row clearfix">
                     <div class="col-md-6 col-sm-6 col-xs-12">
 
@@ -99,10 +99,10 @@
                     <div class="col-md-12 col-sm-12 col-xs-12">
                         <div class="form-group">
                             <input id="form_botcheck" name="form_botcheck" class="form-control" type="hidden" value="">
-                            
-                            
+
+
                             <button id="butt" onclick="document.getElementById('id01').style.display='block'" class="thm-btn" type="submit" data-loading-text="Please wait..." disabled>send message</button>
-                            
+
                         </div>
                     </div>
 
